# Android-Dynamic-Plugin-demo

./: README  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ancliveplugin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androiddynamicplugin/: DynamicLoader.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ancliveplugin/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
testdepence/: build.gradle
testdepence/src/androidTest/java/com/example/testdepence/: ExampleInstrumentedTest.java
testdepence/src/main/: AndroidManifest.xml
testdepence/src/main/cpp/: CMakeLists.txt  anclive-jni.cpp
testdepence/src/main/java/com/example/testdepence/: Add.java
testdepence/src/test/java/com/example/testdepence/: ExampleUnitTest.java
